[workspace]
members = [
    "bins/*",
    "crates/build",
    "crates/codec",
    "crates/codec-derive",
    "crates/contracts",
    "crates/crypto",
    "crates/evm",
    "crates/genesis",
    "crates/node",
    "crates/revm",
    "crates/runtime",
    "crates/sdk",
    "crates/sdk-derive",
    "crates/testing",
    "crates/types",
    "crates/dpos/*",
    "devnet/local-dpos-smoke/genesis-bootstrap",
    "e2e",
]
exclude = [
    "crates/svm-common",
    "crates/svm-shared",
    "crates/svm",
    "examples/svm",
    # exclude revm e2e testing suite to let it be a separate crate
    "evm-e2e",
]
resolver = "2"

[workspace.package]
version = "1.3.0-rc.1"
authors = [
    "Dmitry Savonin <dmitry@fluentlabs.xyz>",
]
description = "A framework to build smart contracts on the Fluent L2 as well as blockchains and verifiable compute environments that compile to rWasm"
repository = "https://github.com/fluentlabs-xyz/fluentbase"
edition = "2021"
# If you change it, remember to change in Dockerfile (fluentbase-build)
rust-version = "1.93.1"
readme = "README.md"
license = "MIT"
keywords = ["wasm", "webassembly", "interpreter", "vm"]
categories = ["wasm", "no-std", "virtualization"]

[workspace.dependencies]
# fluentbase
fluentbase-build = { path = "./crates/build", default-features = false, version = "1.3.0-rc.1" }
fluentbase-codec = { path = "./crates/codec", default-features = false, features = ["derive"], version = "1.3.0-rc.1" }
fluentbase-codec-derive = { path = "./crates/codec-derive", default-features = false, version = "1.3.0-rc.1" }
fluentbase-contracts = { path = "./crates/contracts", default-features = false, version = "1.3.0-rc.1" }
fluentbase-crypto = { path = "./crates/crypto", default-features = false, version = "1.3.0-rc.1" }
fluentbase-evm = { path = "./crates/evm", default-features = false, version = "1.3.0-rc.1" }
fluentbase-genesis = { path = "./crates/genesis", default-features = false, version = "1.3.0-rc.1" }
fluentbase-node = { path = "./crates/node", default-features = false, version = "1.3.0-rc.1" }
fluentbase-bls = { path = "./crates/dpos/bls", version = "1.3.0-rc.1" }
fluentbase-staking-reader = { path = "./crates/dpos/staking-reader", version = "1.3.0-rc.1" }
fluentbase-p2p = { path = "./crates/dpos/p2p", default-features = false, version = "1.3.0-rc.1" }
fluentbase-consensus = { path = "./crates/dpos/consensus", default-features = false, version = "1.3.0-rc.1" }
fluentbase-revm = { path = "./crates/revm", default-features = false, version = "1.3.0-rc.1" }
fluentbase-runtime = { path = "./crates/runtime", default-features = false, version = "1.3.0-rc.1" }
fluentbase-sdk = { path = "./crates/sdk", default-features = false, version = "1.3.0-rc.1" }
fluentbase-sdk-derive = { path = "./crates/sdk-derive", default-features = false, version = "1.3.0-rc.1" }
fluentbase-sdk-derive-core = { path = "./crates/sdk-derive/derive-core", default-features = false, version = "1.3.0-rc.1" }
fluentbase-testing = { path = "./crates/testing", version = "1.3.0-rc.1" }
fluentbase-types = { path = "./crates/types", default-features = false, version = "1.3.0-rc.1" }
#fluentbase-svm = { path = "./crates/svm", default-features = false }
#fluentbase-svm-shared = { path = "./crates/svm-shared", default-features = false }
#fluentbase-svm-common = { path = "./crates/svm-common", default-features = false }

# solana
#solana-pubkey = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-instruction = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-account-info = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-clock = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-epoch-schedule = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-sanitize = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-short-vec = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-hash = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-program-error = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-transaction-error = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-sysvar-id = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-serialize-utils = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-sha256-hasher = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-decode-error = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-program-entrypoint = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-feature-set = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-program-memory = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-stable-layout = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-bincode = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-precompile-error = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-poseidon = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-curve25519 = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-bn254 = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-program-option = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-program-pack = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
#solana-pubkey = { path = "../agave/sdk/pubkey", default-features = false }
#solana-instruction = { path = "../agave/sdk/instruction", default-features = false }
#solana-account-info = { path = "../agave/sdk/account-info", default-features = false }
#solana-clock = { path = "../agave/sdk/clock", default-features = false }
#solana-epoch-schedule = { path = "../agave/sdk/epoch-schedule", default-features = false }
#solana-sanitize = { path = "../agave/sdk/sanitize", default-features = false }
#solana-short-vec = { path = "../agave/short-vec", default-features = false }
#solana-hash = { path = "../agave/sdk/hash", default-features = false }
#solana-program-error = { path = "../agave/sdk/program-error", default-features = false }
#solana-transaction-error = { path = "../agave/sdk/transaction-error", default-features = false }
#solana-sysvar-id = { path = "../agave/sdk/sysvar-id", default-features = false }
#solana-serialize-utils = { path = "../agave/sdk/serialize-utils", default-features = false }
#solana-sha256-hasher = { path = "../agave/sdk/sha256-hasher", default-features = false }
#solana-decode-error = { path = "../agave/sdk/decode-error", default-features = false }
#solana-program-entrypoint = { path = "../agave/sdk/program-entrypoint", default-features = false }
#solana-feature-set = { path = "../agave/sdk/feature-set", default-features = false }
#solana-program-memory = { path = "../agave/sdk/program-memory", default-features = false }
#solana-stable-layout = { path = "../agave/sdk/stable-layout", default-features = false }
#solana-bincode = { path = "../agave/sdk/bincode", default-features = false }
#solana-precompile-error = { path = "../agave/sdk/precompile-error", default-features = false }
#solana-poseidon = { path = "../agave/poseidon", default-features = false }
#solana-curve25519 = { path = "../agave/curves/curve25519", default-features = false }
#solana-bn254 = { path = "../agave/curves/bn254", default-features = false }
#solana-program-option = { path = "../agave/sdk/program-option", default-features = false }
#solana-program-pack = { path = "../agave/sdk/program-pack", default-features = false }

#solana_rbpf = { git = "https://github.com/fluentlabs-xyz/rbpf", branch = "feat/svm", default-features = false }
#solana_rbpf = { path = "../rbpf", default-features = false }

# rwasm
rwasm = { version = "0.4.3", default-features = false }

# alloy
alloy-primitives = { version = "1.5.6", default-features = false, features = ["map-foldhash", "sha3-keccak", "rlp"] }
alloy-rlp = { version = "0.3.13", default-features = false, features = ["core-net"] }
alloy-sol-types = { version = "1.5.0", default-features = false, features = ["json"] }
alloy-signer = { version = "1", default-features = false }
alloy-signer-local = { version = "1", features = ["keystore"] }
tokio-util = { version = "0.7", default-features = false }
dashmap = "6"
alloy-provider = { version = "1", default-features = false }
blst = { version = "0.3.16", default-features = false, features = ["no-threads"] }
alloy-genesis = { version = "2.0.4", default-features = false }
alloy-evm = { version = "0.34.0", default-features = false }
alloy-consensus = { version = "2.0.4", default-features = false }
alloy-network = { version = "2.0.4", default-features = false }
alloy-trie = { version = "0.9.4", default-features = false }
alloy-eips = { version = "2.0", default-features = false }

# misc
blake3 = { version = "1.5.4", default-features = false }
byteorder = { version = "1.5.0", default-features = false }
itertools = { version = "0.14.0", default-features = false, features = ["use_alloc"] }
bytemuck = { version = "1.10.1", default-features = false, features = ["derive"] }
bytemuck_derive = { version = "1.8", default-features = false }
num_enum = { version = "0.7.3", default-features = false, features = [] }
arrayref = { version = "0.3.9", default-features = false, features = [] }
proptest = { version = "1.5.0" }
unty = "0.0.4"
humantime = "2.1"
humantime-serde = "1.1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
directories = "6.0.0"

# sp1
sp1-curves = { version = "5.2.4" }
generic-array = { version = "=1.1.0", default-features = false, features = ["alloc"] }

num-derive = { version = "0.4" }
num-traits = { version = "0.2", features = ["i128"], default-features = false }

hashbrown = { version = "0.16.0", default-features = false, features = ["default-hasher", "inline-more"] }
schnellru = { version = "0.2" }
serde = { version = "1.0.203", default-features = false, features = ["derive", "rc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_bytes = { version = "0.11.15", default-features = false }
serde_with = { version = "3.11.0", default-features = false }
spin = { version = "0.10.0", default-features = false, features = ["mutex"] }
static_assertions = { version = "1.1.0", default-features = false }
memoffset = { version = "0.9.1", default-features = false }
paste = { version = "1.0", default-features = false }
auto_impl = { version = "1.2", default-features = false }
metrics = { version = "0.24.3", default-features = false }
bytes = { version = "1.10.1", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
jsonrpsee = { version = "0.26", default-features = false, features = ["server", "client", "macros", "ws-client", "http-client"] }
hex-literal = { version = "1.0.0" }
strum_macros = { version = "0.27.1" }
lazy_static = { version = "1.5.0", default-features = false, features = ["spin_no_std"] }
anyhow = { version = "1.0.86", default-features = false }
syn = "2.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
bitvec = { version = "1", default-features = false, features = ["alloc"] }
bincode = { version = "2.0.1", default-features = false, features = ["alloc", "derive"] }
convert_case = "0.8.0"
proc-macro2 = { version = "1.0", default-features = false }
quote = { version = "1.0" }
elliptic-curve = { version = "0.13.4", features = ["hazmat", "sec1", "ecdh"], default-features = false }
cfg-if = { version = "1.0.3", default-features = false }

# revm
revm = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v107-patched", default-features = false }
revm-primitives = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v107-patched", default-features = false }
revm-precompile = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v107-patched", default-features = false }
revm-bytecode = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v107-patched", default-features = false }
revm-interpreter = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v107-patched", default-features = false }
revm-context = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v107-patched", default-features = false }
revm-context-interface = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v107-patched", default-features = false }
revm-statetest-types = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v107-patched", default-features = false }

# precompiles
ark-bn254 = { version = "0.5", default-features = false }
ark-ec = { version = "0.5", default-features = false }
ark-ff = { version = "0.5", default-features = false }
ark-serialize = { version = "0.5", default-features = false }
k256 = { version = "0.13.4", default-features = false }
libsecp256k1 = { version = "0.7", default-features = false }
secp256k1 = { version = "0.31.0", default-features = false }
sha2 = { version = "0.10.9", default-features = false }

# revme
clap = { version = "4", features = ["derive"] }

# reth
reth-ethereum-cli = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }
reth-chainspec = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }
reth-primitives-traits = { version = "0.3.1", default-features = false }
reth-ethereum-primitives = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }
reth-db = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow", features = ["mdbx"] }
reth-db-common = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }
reth-provider = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }
reth-revm = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }
reth-transaction-pool = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }
reth-cli = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }
reth-cli-commands = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }
reth-cli-runner = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }
reth-cli-util = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }
reth-consensus-common = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }
reth-rpc-builder = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }
reth-rpc = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }
reth-rpc-convert = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }
reth-rpc-api = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow", features = ["client"] }
reth-rpc-eth-types = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }
reth-rpc-server-types = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }
reth-network = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow", features = ["serde"] }
reth-network-api = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }
reth-network-peers = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }
reth-tasks = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }
reth-payload-builder = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }
reth-payload-primitives = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }
reth-basic-payload-builder = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }
reth-chain-state = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }
reth-payload-builder-primitives = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }
reth-node-api = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }
reth-node-core = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }
reth-ethereum-payload-builder = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }
reth-node-ethereum = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }
reth-node-builder = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }
reth-node-metrics = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }
reth-consensus = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }
reth-ethereum-consensus = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }
reth-node-types = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }
reth-storage-api = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }
reth-ethereum = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }
reth-ethereum-engine-primitives = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }
reth-evm = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }
reth-evm-ethereum = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }
reth-consensus-debug-client = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }
reth-engine-primitives = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }
reth-engine-tree = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }
crossbeam-channel = "0.5"
reth-trie-common = { git = "https://github.com/fluentlabs-xyz/reth.git", branch = "v2.2-patched-tree-escrow" }

# alloy-rpc-types
alloy-rpc-types = { version = "2.0.4", features = ["eth"], default-features = false }
alloy-rpc-types-eth = { version = "2.0.4", default-features = false }
alloy-rpc-types-engine = { version = "2.0.4", default-features = false }

# reth deps
tracing = { version = "0.1.0", default-features = false }
tokio = { version = "1.44.2", default-features = false }
aquamarine = { version = "0.6" }
backon = { version = "1.2", default-features = false, features = ["std-blocking-sleep", "tokio-sleep"] }
tempfile = { version = "3.20" }
eyre = "0.6"

# misc
bitflags = { version = "2.6.0", default-features = false }
once_cell = { version = "1.19", default-features = false, features = ["alloc"] }
rand = "0.9.2"
rand_08 = { package = "rand", version = "0.8.5" }
rand_core = "0.6.4"
prometheus-client = "0.24.0"
commonware-cryptography = { git = "https://github.com/commonwarexyz/monorepo", tag = "v2026.4.0", default-features = false }
commonware-consensus = { git = "https://github.com/commonwarexyz/monorepo", tag = "v2026.4.0", default-features = false }
commonware-utils = { git = "https://github.com/commonwarexyz/monorepo", tag = "v2026.4.0", default-features = false }
commonware-codec = { git = "https://github.com/commonwarexyz/monorepo", tag = "v2026.4.0", default-features = false }
commonware-math = { git = "https://github.com/commonwarexyz/monorepo", tag = "v2026.4.0", default-features = false }
commonware-storage = { git = "https://github.com/commonwarexyz/monorepo", tag = "v2026.4.0", default-features = false }
commonware-runtime = { git = "https://github.com/commonwarexyz/monorepo", tag = "v2026.4.0", default-features = false }
commonware-p2p = { git = "https://github.com/commonwarexyz/monorepo", tag = "v2026.4.0", default-features = false }
commonware-broadcast = { git = "https://github.com/commonwarexyz/monorepo", tag = "v2026.4.0", default-features = false }
commonware-parallel = { git = "https://github.com/commonwarexyz/monorepo", tag = "v2026.4.0", default-features = false }
commonware-resolver = { git = "https://github.com/commonwarexyz/monorepo", tag = "v2026.4.0", default-features = false }
num-bigint = { version = "0.4.6", default-features = false, features = [] }
curve25519-dalek = { version = "4.1.3", default-features = false, features = ["alloc"] }
flate2 = "1.1.9"
parking_lot = "0.12"

# dev-dependencies
serde_derive = { version = "1.0", default-features = false }
thiserror = "2.0"
array-bytes = "9.3.0"

[patch."https://github.com/fluentlabs-xyz/fluentbase"]
fluentbase-build = { path = "./crates/build" }
fluentbase-codec = { path = "./crates/codec" }
fluentbase-codec-derive = { path = "./crates/codec-derive" }
fluentbase-contracts = { path = "./crates/contracts" }
fluentbase-crypto = { path = "./crates/crypto" }
fluentbase-evm = { path = "./crates/evm" }
fluentbase-genesis = { path = "./crates/genesis" }
fluentbase-node = { path = "./crates/node" }
fluentbase-revm = { path = "./crates/revm" }
fluentbase-runtime = { path = "./crates/runtime" }
fluentbase-sdk = { path = "./crates/sdk" }
fluentbase-sdk-derive = { path = "./crates/sdk-derive" }
fluentbase-testing = { path = "./crates/testing" }
fluentbase-types = { path = "./crates/types" }

[patch.crates-io]
# reth
reth-codecs = { git = "https://github.com/fluentlabs-xyz/reth-core-rwasm", branch = "v0.3.1-patched" }
reth-primitives-traits = { git = "https://github.com/fluentlabs-xyz/reth-core-rwasm", branch = "v0.3.1-patched" }

# revm
revm = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v107-patched" }
revm-bytecode = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v107-patched" }
revm-database = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v107-patched" }
revm-state = { package = "revm-state", git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v107-patched" }
revm-primitives = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v107-patched" }
revm-interpreter = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v107-patched" }
revm-inspector = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v107-patched" }
revm-context = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v107-patched" }
revm-context-interface = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v107-patched" }
revm-database-interface = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v107-patched" }
#revm-statetest-types = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v107-patched" }
#op-revm = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v107-patched" }

# tiny-keccak
tiny-keccak = { git = "https://github.com/fluentlabs-xyz/tiny-keccak.git", branch = "rwasm" }

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rustdoc.all = "warn"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.bench]
lto = "fat"
codegen-units = 1

[profile.release]
panic = "unwind"
lto = "thin"
opt-level = 3
strip = "symbols"
debug = "none"
debug-assertions = false
rpath = false
codegen-units = 16

# Speed up compilation time for dev builds by reducing emitted debug info.
# NOTE: Debuggers may provide less useful information with this setting.
# Uncomment this section if you're using a debugger.
[profile.dev]
# https://davidlattimore.github.io/posts/2024/02/04/speeding-up-the-rust-edit-build-run-cycle.html
#debug = "line-tables-only"
#split-debuginfo = "unpacked"

[profile.dev.build-override]
#debug = false
opt-level = 3

# Use the `--profile profiling` flag to show symbols in release mode.
# e.g. `cargo build --profile profiling`
[profile.profiling]
debug = "full"
inherits = "release"
strip = "none"

[profile.ethtests]
inherits = "test"
opt-level = 3

# Speed up tests.
[profile.dev.package]
proptest.opt-level = 3
rand_chacha.opt-level = 3
rand_xorshift.opt-level = 3
unarray.opt-level = 3

# Meant for testing - all optimizations, but with debug assertions and overflow checks.
[profile.hivetests]
inherits = "test"
opt-level = 3
lto = "thin"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.reproducible]
inherits = "release"
panic = "abort"
codegen-units = 1
incremental = false

