[package]
name = "fluentbase-circuits"
version = "0.1.0"
authors = [
    "Dmitry Savonin <dmitry@wasm0.io>",
]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
ethers-core = "0.17.0"
itertools = "0.10.5"
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_02_02" }
poseidon-circuit = { git = "https://github.com/scroll-tech/poseidon-circuit.git", branch = "main" }
#halo2curves = { git = "https://github.com/scroll-tech/halo2curves.git", branch = "0.3.1-derive-serde", default-features = false }
mpt-circuits = { package = "halo2-mpt-circuits", git = "https://github.com/scroll-tech/mpt-circuit.git", tag = "v0.6.5" }
rand = "0.8"
lazy_static = "1.4.0"
num-traits = "0.2.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.25.0"
strum_macros = "0.25.1"
num-bigint = "0.4"
hex = "0.4"
thiserror = "1.0"
log = "0.4"
fluentbase-rwasm = {path = "../rwasm"}
fluentbase-runtime = {path = "../runtime"}
wat = "1.0.69"
plotters = "0.3"
wasm-encoder = "0.31.1"
rand_xorshift = "0.3.0"
cli-table = "0.4.7"
bitintr = "0.3.0"
seq-macro = "0.3.5"
env_logger = "0.10.0"
ctor = "0.2.4"
byteorder = "1.4.3"
wasi = "0.11.0"

[features]
default = ["dev-graph", "std"]
std = ["fluentbase-rwasm/std"]
dev-graph = ["halo2_proofs/dev-graph"]
print_layout = ["halo2_proofs/dev-graph"]

[dev-dependencies]
rand_chacha = "0.3.0"
plotters = "0.3"
bencher = "0.1"
subtle = "2"
