[workspace]
members = ["*"]
exclude = [".cargo", "fairblock", "target"]
resolver = "2"

[workspace.package]
authors = [
    "Dmitry Savonin <dmitry@fluentlabs.xyz>",
]
repository = "https://github.com/fluentlabs-xyz/fuentbase"
edition = "2021"
license = "MIT"
keywords = ["wasm", "webassembly", "interpreter", "vm"]
categories = ["wasm", "no-std", "virtualization"]
readme = "README.md"

[workspace.dependencies]
# fluentbase
fluentbase-sdk = { path = "../crates/sdk", default-features = false }
fluentbase-universal-token = { path = "../crates/universal-token", default-features = false }
fluentbase-evm = { path = "../crates/evm", default-features = false }
fluentbase-svm-common = { path = "../crates/svm-common", default-features = false }
fluentbase-svm = { path = "../crates/svm", default-features = false }
fluentbase-testing = { path = "../crates/testing", default-features = false }
# revm
revm-precompile = { package = "revm-rwasm-precompile", version = "24.0.1", default-features = false }
# solana
solana-program-error = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
solana-program-option = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
solana-bincode = { git = "https://github.com/fluentlabs-xyz/agave", branch = "feat/svm", default-features = false }
# misc
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
ecdsa = { git = "https://github.com/rwasm-patches/signatures.git", default-features = false, features = ["hazmat", "verifying"] }
k256 = { version = "0.13.4", default-features = false }

[profile.release]
panic = "abort"
lto = "fat"
opt-level = 3
strip = true
debug = false
debug-assertions = false
rpath = false
codegen-units = 1
overflow-checks = false

# Optimize WASM for size in debug to avoid massive binaries that slow compilation
[profile.dev]
opt-level = "z"
debug = false
strip = "symbols"

[patch.crates-io]
# patch tiny-keccak
tiny-keccak = { git = "https://github.com/rwasm-patches/tiny-keccak.git", branch = "rwasm" }
bls12_381 = { git = "https://github.com/rwasm-patches/bls12_381.git", branch = "rwasm" }
# patch fluentbase
fluentbase-sdk = { path = "../crates/sdk" }
fluentbase-universal-token = { path = "../crates/universal-token" }
fluentbase-evm = { path = "../crates/evm" }
fluentbase-svm-common = { path = "../crates/svm-common" }
fluentbase-svm = { path = "../crates/svm" }
fluentbase-testing = { path = "../crates/testing" }
#revm-precompile = { path = "../../revm-rwasm/crates/precompile" }
#ecdsa = { path = "../../signatures/ecdsa" }
