[package]
name = "fluentbase-e2e"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
fluentbase-codec = { workspace = true }
fluentbase-genesis = { workspace = true }
fluentbase-runtime = { workspace = true }
fluentbase-sdk = { workspace = true }
fluentbase-testing = { workspace = true }
#fluentbase-svm = { workspace = true }
#fluentbase-svm-common = { workspace = true }
#fluentbase-svm-shared = { workspace = true }
fluentbase-contracts = { workspace = true }
#curve25519-dalek = { workspace = true }

alloy-genesis = { workspace = true }
rwasm = { workspace = true }
revm = { workspace = true }
fluentbase-revm = { workspace = true }
hex-literal = { workspace = true }
hex = { workspace = true }
alloy-sol-types = { workspace = true }
eyre = { workspace = true }
directories = "6.0.0"
wat = { version = "1.223.0" }
paste = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rand = { version = "0.9.1" }
sha2 = { workspace = true }
bytes = "1.11.1"
serde = { workspace = true }
serde_json = { workspace = true }
flate2 = { workspace = true }

[dev-dependencies]
#fluentbase-svm = { workspace = true }
fluentbase-sdk = { workspace = true }
criterion = "0.8.1"
#solana-curve25519 = { workspace = true, default-features = false }
#solana-bn254 = { workspace = true, default-features = false }
#solana-poseidon = { workspace = true, default-features = false }
#solana-program-pack = { workspace = true, default-features = false }
#array-bytes = { workspace = true }
#ark-bn254 = { workspace = true }
#ark-serialize = { workspace = true }

[features]
default = [
    "std",
    "wasmtime",
    # "debug-print",
]
svm = [
    "fluentbase-genesis/svm",
]
std = [
    "fluentbase-codec/std",
    "fluentbase-genesis/std",
    "fluentbase-runtime/std",
    "fluentbase-sdk/std",
    "rwasm/std",
    "revm/std",
    "fluentbase-testing/std",
]
debug-print = [
    "fluentbase-runtime/debug-print",
    "fluentbase-sdk/debug-print",
    "fluentbase-genesis/debug-print",
    "fluentbase-contracts/debug-print",
    "revm/debug-print",
    "fluentbase-revm/debug-print",
    # "fluentbase-svm/debug-print",
    #"rwasm/debug-print",
]
wasmtime = [
    "fluentbase-runtime/wasmtime",
    "fluentbase-revm/wasmtime",
]

[[bench]]
name = "erc20"
harness = false

[[bench]]
name = "greeting"
harness = false
